--- a/index.html
+++ b/index.html
@@ -3,65 +3,75 @@
 <head>
 	<meta charset="utf-8">
 	<title>Rock | Paper | Scissors</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<h1>
+		Rock || Paper || Scissors
+	</h1>
+	<div class="buttons">
+		<button id="btn-rock">Rock</button>
+		<button id="btn-paper">Paper</button>
+		<button id="btn-scissors">Scissors</button>
+	</div>
+
 	<script>
+
 		function computerPlay() {
 			const choices = ['rock', 'paper', 'scissors'];
 			let choice = choices[Math.floor(Math.random() * choices.length)];
 			return choice
 		}
 
-		function getUserSelection() {
-			playerSelection = prompt('Choose wisely... do you want to throw down a rock, paper, or scissors?');
-			playerSelection = playerSelection.toLowerCase();
-			// Check that input is a valid.
-			while (playerSelection !== 'rock' && playerSelection !== 'paper' && playerSelection !== 'scissors') {
-				playerSelection = prompt('Invalid selection. Please enter "rock", "paper", or "scissors".');
+		let id;
+		let playerSelection;
+
+		function whichButton(event) {
+			id = event.target.id;
+			if (id == 'btn-rock') {
+			playerSelection = 'rock';
+			} else if (id == 'btn-paper') {
+			playerSelection = 'paper';
+			} else if (id == 'btn-scissors') {
+			playerSelection = 'scissors';
 			}
-			return playerSelection
+			return id;
 		}
 
-		// officiates a single round of play.
-		function playRound(playerSelection, compSelection) {
+		const rock = document.querySelector('#btn-rock');
+		const paper = document.querySelector('#btn-paper');
+		const scissors = document.querySelector('#btn-scissors');
+
+		rock.addEventListener('click', whichButton);
+		paper.addEventListener('click', whichButton);
+		scissors.addEventListener('click', whichButton);
+
+		function playRound() {
+			let compSelection = computerPlay();
+
+			function capitalize(word) {
+				word = (word.slice(0, 1).toUpperCase()) + word.substr(1);
+				return word;
+			}
+
 			if (playerSelection == 'rock' && compSelection == 'scissors' || playerSelection == 'paper' && compSelection == 'rock' || playerSelection == 'scissors' && compSelection == 'paper') {
-				alert('You win! ' + playerSelection + ' beats ' + compSelection + '.');
+				console.log('You win! ' + capitalize(playerSelection) + ' beats ' + capitalize(compSelection) + '.');
 				return 'win'
 			} else if (playerSelection == compSelection) {
-				alert('It\'s a tie! Throw down again.');
+				console.log('It\'s a tie! Throw down again.');
 				return 'tie'
 			} else {
-				alert('You lose. ' + compSelection + ' beats ' + playerSelection + '.');
+				console.log('You lose. ' + capitalize(compSelection) + ' beats ' + capitalize(playerSelection) + '.');
 				return 'loss'
 			}
 		}
 
-		function game() {
-			let roundNumber = 0;
-			let outcome;
-			let playerScore = 0;
-			let compScore = 0;
-			while (roundNumber < 5) {
-				compSelection = computerPlay();
-				playerSelection = getUserSelection();
-				// calling playRound() by setting to var 'outcome' to reference later.
-				outcome = playRound(playerSelection, compSelection);
-				roundNumber += 1;
-				if (outcome == 'win') {
-					playerScore += 1;
-				} else if (outcome == 'loss') {
-					compScore += 1;
-				}
-				console.log('Round ' + roundNumber + '-- ' + 'Player Score: ' + playerScore + ' Computer Score: ' + compScore);
-			}
-			// Determine the winner and log the results.
-			if (playerScore < compScore) {
-				console.log('Game Over. You lose. The final score is-- ' + 'Player: ' + playerScore + ' Computer: ' + compScore);
+		rock.addEventListener('click', playRound);
+		paper.addEventListener('click', playRound);
+		scissors.addEventListener('click', playRound);
 
-			} else {
-				console.log('Game over. You win! The final score is-- ' + 'Player: ' + playerScore + ' Computer: ' + compScore);
-			}
-		}
+		
+	
 	</script>
 </body>
 </html>
